Mise à jour du chapitre 4

--- a/01-force-electrique/planif01.tex
+++ b/01-force-electrique/planif01.tex
@@ -754,7 +754,7 @@ est $x = \SI{-22.25}{cm}$.
 \sectionline
 
 
-\section{Révision}
+\section{Résumé}
 
 \begin{itemize}
   \item Deux types de charges (positive et négative).
